@@ -54,6 +54,7 @@
     <File name="Config/FrontendConfig.cs" subtype="Code" buildaction="Compile" />
     <File name="Config/ChannelFilterModel.cs" subtype="Code" buildaction="Compile" />
     <File name="Config/ChannelFilterListController.cs" subtype="Code" buildaction="Compile" />
+    <File name="Chats/SessionChatModel.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../lib/log4net.dll" />
