@@ -55,6 +55,7 @@
     <File name="Chats/GroupChatView.cs" subtype="Code" buildaction="Compile" />
     <File name="Chats/PersonChatView.cs" subtype="Code" buildaction="Compile" />
     <File name="Chats/NetworkChatView.cs" subtype="Code" buildaction="Compile" />
+    <File name="Chats/SessionChatView.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Engine" />
